--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: go mod vendor
-      - run: GOOS=windows GOARCH=amd64 go build -ldflags "-s -w" -o app.exe main.go
+      - run: GOOS=windows GOARCH=amd64 go build -ldflags "-s -w" -o app.exe
       - run: mkdir -p dist
       - run: mv app.exe dist/
       - uses: montudor/action-zip@v1
